Funcionalidade Básica do Canhão; Tiro

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,8 +51,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Codes\inimigo_Vampiro.cs" />
-     <Compile Include="Assets\Codes\pooler.cs" />
+     <Compile Include="Assets\Códigos\Canhão\atirar_Canhao.cs" />
+     <Compile Include="Assets\Códigos\Canhão\tiro_defaut.cs" />
+     <Compile Include="Assets\Códigos\Inimigos\Inimigo_Defaut.cs" />
+     <Compile Include="Assets\Códigos\Inimigos\inimigo_Vampiro.cs" />
+     <Compile Include="Assets\Códigos\pooler.cs" />
  <Reference Include="UnityEngine.CoreModule">
  <HintPath>C:/Program Files/Unity/2018.4.11f1/Editor/Data/Managed/UnityEngine/UnityEngine.CoreModule.dll</HintPath>
  </Reference>
