--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
      <Compile Include="Assets\Códigos\Canhão\atirar_Canhao.cs" />
      <Compile Include="Assets\Códigos\Canhão\tiro_defaut.cs" />
+     <Compile Include="Assets\Códigos\Cógigos de Animação\animacao_DesativarTela.cs" />
+     <Compile Include="Assets\Códigos\Cógigos de Animação\animacao_pauseSomente.cs" />
      <Compile Include="Assets\Códigos\GerenteDeJogo.cs" />
      <Compile Include="Assets\Códigos\Inimigos\Inimigo_Defaut.cs" />
      <Compile Include="Assets\Códigos\Inimigos\inimigo_Vampiro.cs" />
