--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Códigos\Canhão\atirar_Canhao.cs" />
+     <Compile Include="Assets\Códigos\Canhão\gerenciadorDeTiros.cs" />
      <Compile Include="Assets\Códigos\Canhão\gerenciadorDeUiDeVida.cs" />
      <Compile Include="Assets\Códigos\Canhão\tiro_defaut.cs" />
      <Compile Include="Assets\Códigos\Cógigos de Animação\animacao_DesativarTela.cs" />
